--- a/exploding-kittens-frontend/package.json
+++ b/exploding-kittens-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.1",
     "classnames": "^2.3.2",
     "next": "14.0.3",
     "react": "^18",
