--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "apollo-server": "^3.8.1",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
